--- a/config/database.yml
+++ b/config/database.yml
@@ -20,12 +20,15 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  host: <%= ENV["DATABASE_HOST"] %>
+  username: <%= ENV["DATABASE_USER"] %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
 
 development:
   <<: *default
   database: money_tracker_app_development
-  user: postgres
-  password: 4nt0n10.
+  # user: postgres
+  # password: 4nt0n10.
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +63,8 @@ development:
 test:
   <<: *default
   database: money_tracker_app_test
-  user: postgres
-  password: 4nt0n10.
+  # user: postgres
+  # password: 4nt0n10.
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
